fixed form button alignment in index

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -493,7 +493,9 @@ footer{
     border-radius: 8px;
     text-align: center;
     margin-top: 525px;
-    margin-left: 525px;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: center;
     font-size: x-large;
     font-family: "Playpen Sans", serif;
     cursor: pointer;
